--- a/css/_reset.css
+++ b/css/_reset.css
@@ -1,9 +1,19 @@
 *{
     margin:0;
     padding:0;
+    box-sizing: border-box;
     
 }
 body{
-    font-family:sans-serif, Noto Sans KR, NanumGothic, Gulim;
-    
+    font-family:sans-serif, Noto Sans KR, NanumGothic, Gulim; 
+    color:#333;
+   
+}
+a, a:link{
+    text-decoration: none;
+    color : inherit;
+}
+ul, li{
+    list-style: none;
+    color:inherit;
 }
